--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,7 @@
     "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdf-parse": "^2.4.5",
     "puppeteer": "^24.31.0",
     "razorpay": "^2.9.6",
     "reflect-metadata": "^0.2.2",
